[package]
name = "ddp-router"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
base64 = "0.21.7"
bson = "2.9.0"
config = { version = "0.14.0", default-features = false, features = ["toml"] }
futures-util = "0.3.30"
mongodb = "2.8.0"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.112", features = ["preserve_order"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }

[lints.clippy]
all = "deny"
